--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,29 @@
         <module>api</module>
     </modules>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.4.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
-            <name>Local Nexus Repository</name>
-            <url>http://nexus.watsons.com:8081/content/repositories/releases/</url>
+            <name>Local Nexus Release Repository</name>
+            <url>http://nexus.intecsec.com:8081/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
-            <name>Local Nexus Repository</name>
-            <url>http://nexus.watsons.com:8081/content/repositories/snapshots/</url>
+            <name>Local Nexus Snapshot Repository</name>
+            <url>http://nexus.intecsec.com:8081/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
