--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 			<version>4.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-core</artifactId>
+			<version>0.1.1</version>
+		</dependency>
+
 
 	</dependencies>
 
