--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 			<version>0.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-transport-simple-http</artifactId>
+			<version>0.1.1</version>
+		</dependency>
 
 	</dependencies>
 
