--- a/blog-common/pom.xml
+++ b/blog-common/pom.xml
@@ -12,4 +12,12 @@
     <artifactId>blog-common</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
 </project>
