--- a/blog-core/src/main/resources/application.properties
+++ b/blog-core/src/main/resources/application.properties
@@ -7,13 +7,13 @@ logging.level.org.springframework=error
 logging.level.org.mybatis=error
 logging.config=classpath:logback-spring.xml
 
-## Dubbo 服务消费者配置
-spring.dubbo.application.name=intesec-blog-dubbo-provider
-spring.dubbo.application.id=intesec-blog-dubbo-provider
-spring.dubbo.server=true
-spring.dubbo.protocol.port=20800
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.registry.address=zookeeper://my.zookeeper:2181
+## Dubbo 服务提供者配置
+dubbo.application.name=intesec-blog-dubbo-provider
+dubbo.protocol.port=20800
+dubbo.protocol.name=dubbo
+dubbo.registry.address=zookeeper://my.zookeeper:2181
+dubbo.provider.threads=100
+dubbo.provider.group=local_blog
 
 # Database
 spring.datasource.name=intecsec_springboot
