升级springboot, 添加多active

--- a/blog-core/src/main/resources/application.properties
+++ b/blog-core/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+spring.profiles.active=local
 
 # Debug
 debug=false
@@ -7,24 +8,13 @@ logging.level.org.springframework=error
 logging.level.org.mybatis=error
 logging.config=classpath:logback-spring.xml
 
-## Dubbo 服务提供者配置
-dubbo.application.name=intesec-blog-dubbo-provider
-dubbo.protocol.port=20800
-dubbo.protocol.name=dubbo
-dubbo.registry.address=zookeeper://my.zookeeper:2181
-dubbo.provider.threads=100
-dubbo.provider.group=local_blog
-
 # Database
 spring.datasource.name=intecsec_springboot
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #druid相关配置
 spring.datasource.druid.filters=stat
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-#连接参数
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
+
 #配置初始化大小/最小/最大
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
@@ -56,10 +46,6 @@ pagehelper.params=count=countSql
 pagehelper.returnPageInfo=check
 
 # Redis
-spring.redis.database=0
-spring.redis.host=my.redis
-spring.redis.port=6379
-spring.redis.password=
 spring.redis.timeout=1000ms
 spring.redis.maxTotal=50
 spring.redis.soTimeout=500
@@ -78,9 +64,6 @@ spring.redis.minEvictableIdleTimeMillis=300000
 spring.redis.timeBetweenEvictionRunsMillis=60000
 
 # RocketMQ配置
-apache.rocketmq.consumer.pushConsumer=PushConsumer
-apache.rocketmq.producer.producerGroup=Producer
-apache.rocketmq.namesrvAddr=my.rocketmq:9876
 apache.rocketmq.enableHisConsumer=false
 apache.rocketmq.enableOrderConsumer=false
 
