--- a/blog-client/pom.xml
+++ b/blog-client/pom.xml
@@ -14,12 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.intesec.blog</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>blog-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
-
     </dependencies>
 
 </project>
