--- a/blog-core/src/main/resources/application-local.properties
+++ b/blog-core/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ dubbo.protocol.port=20800
 dubbo.protocol.name=dubbo
 dubbo.registry.address=zookeeper://my.zookeeper:2181
 dubbo.provider.threads=100
-dubbo.provider.group=local_blog
+dubbo.provider.group=local
 
 # Database连接参数
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
@@ -20,4 +20,4 @@ spring.redis.password=
 # RocketMQ配置
 apache.rocketmq.consumer.pushConsumer=PushConsumer
 apache.rocketmq.producer.producerGroup=Producer
-apache.rocketmq.namesrvAddr=my.rocketmq:9876
+apache.rocketmq.namesrvAddr=dev.rocketmq:9876
