--- a/blog-core/src/main/resources/application-dev.properties
+++ b/blog-core/src/main/resources/application-dev.properties
@@ -2,9 +2,12 @@
 dubbo.application.name=intesec-blog-dubbo-provider
 dubbo.protocol.port=20800
 dubbo.protocol.name=dubbo
-dubbo.registry.address=zookeeper://my.zookeeper:2181
-dubbo.provider.threads=100
-dubbo.provider.group=local_blog
+dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.group = dev
+dubbo.provider.threads=200
+dubbo.provider.timeout=2000
+dubbo.provider.retries=0
+dubbo.monitor.protocol=registry
 
 # Database连接参数
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
