--- a/gateway/src/main/resources/application-local.properties
+++ b/gateway/src/main/resources/application-local.properties
@@ -1,6 +1,4 @@
 ## Dubbo 消费者配置
-dubbo.application.name=intesec-gateway
-dubbo.protocol.port=20800
-dubbo.protocol.name=dubbo
-dubbo.registry.address=zookeeper://my.zookeeper:2181
-dubbo.provider.threads=100
+dubbo.application.name=intesec-gateway-consumer
+dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.group=local
