--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 		<module>blog-client</module>
 		<module>gateway</module>
         <module>common</module>
+		<module>blog-app</module>
+        <module>dubbo-common</module>
     </modules>
 
 	<packaging>pom</packaging>
@@ -24,7 +26,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<properties>
@@ -32,9 +34,14 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<mysql.version>5.1.44</mysql.version>
+		<dubbo.spring.boot.version>2.7.5</dubbo.spring.boot.version>
+		<dubbo.dependency.zookeeper.version>2.7.5</dubbo.dependency.zookeeper.version>
+		<!--
+		采用启动器来使用dubbo
 		<dubbo.version>2.7.5</dubbo.version>
 		<curator.version>4.2.0</curator.version>
 		<zk.version>0.11</zk.version>
+		-->
 		<spring.boot.version>1.3.2</spring.boot.version>
 		<page.helper.version>1.2.5</page.helper.version>
 		<commons.lang3.version>3.4</commons.lang3.version>
@@ -73,7 +80,26 @@
 				<version>${slf4j.version}</version>
 			</dependency>
 
-			<!-- dubbo -->
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>dubbo-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<!-- dubbo 启动器 -->
+			<dependency>
+				<groupId>org.apache.dubbo</groupId>
+				<artifactId>dubbo-spring-boot-starter</artifactId>
+				<version>${dubbo.spring.boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.dubbo</groupId>
+				<artifactId>dubbo-dependencies-zookeeper</artifactId>
+				<version>${dubbo.dependency.zookeeper.version}</version>
+			</dependency>
+
+			<!--
+			采用启动器来启动dubbo了
 			<dependency>
 				<groupId>org.apache.dubbo</groupId>
 				<artifactId>dubbo</artifactId>
@@ -89,6 +115,7 @@
 				<artifactId>zkclient</artifactId>
 				<version>${zk.version}</version>
 			</dependency>
+			-->
 
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
