--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -8,12 +8,10 @@ logging.level.org.springframework=error
 logging.level.org.mybatis=error
 logging.config=classpath:logback-spring.xml
 
-# page helper
-pagehelper.helperDialect=mysql
-pagehelper.reasonable=true
-pagehelper.supportMethodsArguments=true
-pagehelper.params=count=countSql
-pagehelper.returnPageInfo=check
+# Database Common
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.intesec.blog.app.mapper
 
 # Redis
 spring.redis.timeout=1000ms
