--- a/blog-app/src/main/resources/application-local.properties
+++ b/blog-app/src/main/resources/application-local.properties
@@ -10,9 +10,9 @@ dubbo.provider.retries=0
 dubbo.monitor.protocol=registry
 
 # Database连接参数
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
-spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
 
 # Redis
 spring.redis.database=0
