--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,8 @@
 		<mysql.version>5.1.44</mysql.version>
 		<dubbo.spring.boot.version>2.7.5</dubbo.spring.boot.version>
 		<dubbo.dependency.zookeeper.version>2.7.5</dubbo.dependency.zookeeper.version>
-		<!--
-		采用启动器来使用dubbo
-		<dubbo.version>2.7.5</dubbo.version>
-		<curator.version>4.2.0</curator.version>
-		<zk.version>0.11</zk.version>
-		-->
-		<spring.boot.version>1.3.2</spring.boot.version>
+		<mybatis.spring.boot.starter.version>2.1.1</mybatis.spring.boot.starter.version>
+		<spring.boot.starter.jdbc.version>2.2.2.RELEASE</spring.boot.starter.jdbc.version>
 		<page.helper.version>1.2.5</page.helper.version>
 		<commons.lang3.version>3.4</commons.lang3.version>
 		<druid.version>1.1.9</druid.version>
@@ -118,9 +113,21 @@
 			-->
 
 			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-jdbc</artifactId>
+				<version>${spring.boot.starter.jdbc.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
-				<version>${spring.boot.version}</version>
+				<version>${mybatis.spring.boot.starter.version}</version>
 			</dependency>
 
 			<dependency>
@@ -140,6 +147,8 @@
 				<artifactId>gson</artifactId>
 				<version>${gson.version}</version>
 			</dependency>
+
+
 
 			<!-- alibaba的druid数据库连接池 -->
 			<dependency>
