--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 server.port=8083
 spring.profiles.active=local
 
-# Debug
-debug=false
-logging.level.root=info
-logging.level.org.springframework=error
-logging.level.org.mybatis=error
+# Log
+log.file.dir=/data/java/logs/springboot/blog
 logging.config=classpath:logback-spring.xml
 
 # Database Common
