--- a/blog-app/src/main/resources/application-local.properties
+++ b/blog-app/src/main/resources/application-local.properties
@@ -21,6 +21,6 @@ spring.redis.port=6379
 spring.redis.password=
 
 # RocketMQ配置
-apache.rocketmq.consumer.pushConsumer=PushConsumer
-apache.rocketmq.producer.producerGroup=Producer
-apache.rocketmq.namesrvAddr=localhost:9876
+rocketmq.consumer.groupName=PushConsumer
+rocketmq.producer.groupName=Producer
+rocketmq.namesrvAddr=localhost:9876
