--- a/blog-app/pom.xml
+++ b/blog-app/pom.xml
@@ -49,8 +49,8 @@
 
         <!-- 缓存redis -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>redis-common</artifactId>
         </dependency>
 
         <!-- 消息队列 -->
