--- a/common-dubbo/pom.xml
+++ b/common-dubbo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-common</artifactId>
+    <artifactId>common-dubbo</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
