--- a/common-redis/pom.xml
+++ b/common-redis/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>redis-common</artifactId>
+    <artifactId>common-redis</artifactId>
 
     <dependencies>
 
