将redis移到公共模块

--- a/common-rocketmq/pom.xml
+++ b/common-rocketmq/pom.xml
@@ -16,11 +16,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>common</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- 消息队列 -->
