--- a/checkout-app/pom.xml
+++ b/checkout-app/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blog-app</artifactId>
+    <artifactId>checkout-app</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>blog-client</artifactId>
+            <artifactId>checkout-client</artifactId>
         </dependency>
 
         <!-- rpc框架dubbo -->
@@ -60,6 +60,5 @@
 
         </plugins>
     </build>
-
 
 </project>
