--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<module>order-client</module>
 		<module>order-common</module>
 		<module>checkout-app</module>
+		<module>mapper-generate</module>
 	</modules>
 
 	<packaging>pom</packaging>
@@ -49,6 +50,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<mysql.version>5.1.44</mysql.version>
+		<mysql.connector.java.version>8.0.19</mysql.connector.java.version>
 		<dubbo.spring.boot.version>2.7.5</dubbo.spring.boot.version>
 		<dubbo.dependency.zookeeper.version>2.7.5</dubbo.dependency.zookeeper.version>
 		<mybatis.spring.boot.starter.version>2.1.1</mybatis.spring.boot.starter.version>
@@ -57,7 +59,7 @@
 		<page.helper.version>1.2.5</page.helper.version>
 		<commons.lang3.version>3.4</commons.lang3.version>
 		<druid.version>1.1.9</druid.version>
-		<mybatis.generator.version>1.3.2</mybatis.generator.version>
+		<mybatis.generator.version>1.4.0</mybatis.generator.version>
 		<rocketmq.version>4.3.0</rocketmq.version>
 		<sentinel.version>0.2.0</sentinel.version>
 		<slf4j.version>1.7.25</slf4j.version>
@@ -215,6 +217,12 @@
 				<version>${gson.version}</version>
 			</dependency>
 
+			<!-- mybatis.generator -->
+			<dependency>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator</artifactId>
+				<version>${mybatis.generator.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
