--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
 		<sentinel.version>0.2.0</sentinel.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<gson.version>2.8.5</gson.version>
+		<commons.codec.version>1.14</commons.codec.version>
+		<javax.servlet.version>4.0.1</javax.servlet.version>
 	</properties>
 
 
@@ -215,6 +217,19 @@
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>${gson.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons.codec.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${javax.servlet.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- mybatis.generator -->
