--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -2,13 +2,12 @@ server.port=8083
 spring.profiles.active=local
 
 # Log
-log.file.dir=/data/java/logs/springboot/blog
-logging.com.intecsec.config.config=classpath:logback-spring.xml
+log.file.dir=/data/java/logs/intecsec/dubbo/blog
 
 # Database Common
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.intecsec.blog.app.mapper
+mybatis.type-aliases-package=com.intecsec.blog.mapper
 
 # Redis
 spring.redis.timeout=1000ms
