--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8090
 spring.application.name=gateway
 spring.profiles.active=local
+
+# Log
+log.file.dir=/data/java/logs/intecsec/dubbo/gateway
