--- a/order-app/src/main/resources/application.properties
+++ b/order-app/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-server.port=8085
+server.port=8086
 spring.profiles.active=local
 
 # Log
-log.file.dir=/data/java/logs/intecsec/dubbo/item
+log.file.dir=/data/java/logs/intecsec/dubbo/order
 
 # Database Common
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.intecsec.mall.item.mapper
+mybatis.type-aliases-package=com.intecsec.mall.order.mapper
 
 # Redis
 spring.redis.timeout=1000ms
