--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-server.port=8085
+server.port=8087
 spring.profiles.active=local
 
 # Log
-log.file.dir=/data/java/logs/intecsec/dubbo/item
+log.file.dir=/data/java/logs/intecsec/dubbo/user
 
 # Database Common
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.intecsec.mall.item.mapper
+mybatis.type-aliases-package=com.intecsec.mall.user.mapper
 
 # Redis
 spring.redis.timeout=1000ms
@@ -30,7 +30,3 @@ spring.redis.timeBetweenEvictionRunsMillis=60000
 # RocketMQ配置
 apache.rocketmq.enableHisConsumer=false
 apache.rocketmq.enableOrderConsumer=false
-
-
-
-
