--- a/gateway/src/main/resources/application-local.properties
+++ b/gateway/src/main/resources/application-local.properties
@@ -2,3 +2,4 @@
 dubbo.application.name=intesec-gateway-consumer
 dubbo.registry.address=zookeeper://localhost:2181
 dubbo.registry.group=local
+dubbo.consumer.check=false
