--- a/common/pom.xml
+++ b/common/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>spring-beans</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
