--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8090
 spring.application.name=gateway
-spring.profiles.active=local
+spring.profiles.active=dev
 
 # Log
 log.file.dir=/data/java/logs/intecsec/dubbo/gateway
+
+## Dubbo œ˚∑—’ﬂ≈‰÷√
+dubbo.registry.protocol=zookeeper
+dubbo.protocol.name=dubbo
+dubbo.consumer.check=false
