--- a/checkout-app/src/main/resources/application.properties
+++ b/checkout-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8084
-spring.profiles.active=local
+spring.profiles.active=dev
 
 # Log
 log.file.dir=/data/java/logs/intecsec/dubbo/checkout
@@ -8,6 +8,17 @@ log.file.dir=/data/java/logs/intecsec/dubbo/checkout
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.intecsec.checkout.mapper
+
+## Dubbo
+dubbo.application.name=intecsec-checkout-dubbo-provider
+dubbo.registry.protocol=zookeeper
+dubbo.protocol.name=dubbo
+dubbo.provider.threads=200
+dubbo.provider.timeout=2000
+dubbo.provider.retries=0
+dubbo.monitor.protocol=registry
+dubbo.consumer.check=false
+dubbo.protocol.port=20807
 
 
 
