--- a/gateway/src/main/resources/application-local.properties
+++ b/gateway/src/main/resources/application-local.properties
@@ -1,5 +1,3 @@
 ## Dubbo 消费者配置
 dubbo.application.name=intesec-gateway-consumer
-dubbo.registry.address=zookeeper://localhost:2181
-dubbo.registry.group=local
-dubbo.consumer.check=false
+dubbo.registry.address=localhost:2181
