--- a/item-app/src/main/resources/application-local.properties
+++ b/item-app/src/main/resources/application-local.properties
@@ -1,13 +1,6 @@
 ## Dubbo 服务提供者配置
-dubbo.application.name=intesec-item-dubbo-provider
-dubbo.protocol.port=20805
-dubbo.protocol.name=dubbo
-dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.address=localhost:2181
 dubbo.registry.group = local
-dubbo.provider.threads=200
-dubbo.provider.timeout=2000
-dubbo.provider.retries=0
-dubbo.monitor.protocol=registry
 
 # Database连接参数
 spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
