优化一下日志配置

--- a/checkout-app/src/main/resources/application.properties
+++ b/checkout-app/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8084
 spring.profiles.active=dev
-
-# Log
-log.file.dir=/data/java/logs/intecsec/dubbo/checkout
+spring.application.name=checkout
 
 # Database Common
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -19,6 +17,10 @@ dubbo.provider.retries=0
 dubbo.monitor.protocol=registry
 dubbo.consumer.check=false
 dubbo.protocol.port=20807
+
+# RocketMQ
+apache.rocketmq.enableHisConsumer=false
+apache.rocketmq.enableOrderConsumer=false
 
 
 
