--- a/user-app/src/main/resources/application.properties
+++ b/user-app/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8087
 spring.profiles.active=dev
-
-# Log
-log.file.dir=/data/java/logs/intecsec/dubbo/user
+spring.application.name=user
 
 # Database Common
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -31,13 +29,10 @@ spring.redis.maxWaitMillis=500
 spring.redis.testOnBorrow=false
 spring.redis.testOnReturn=false
 spring.redis.testWhileIdle=true
-# 每次扫描，逐出空闲线程的最大数量（可以理解为分批逐出，这是一批的数量）
 spring.redis.numTestsPerEvictionRun=30
-# 空闲连接，停留的最短时间（毫秒）：5分钟
 spring.redis.minEvictableIdleTimeMillis=300000
-# 空闲扫描时间间隔（毫秒）：1分钟
 spring.redis.timeBetweenEvictionRunsMillis=60000
 
-# RocketMQ配置
+# RocketMQ
 apache.rocketmq.enableHisConsumer=false
 apache.rocketmq.enableOrderConsumer=false
