--- a/blog-app/src/main/resources/application-dev.properties
+++ b/blog-app/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-## Dubbo 服务提供者配置
+## Dubbo Registry
 dubbo.registry.address=dev.zk.intecsec.com:2181
 dubbo.registry.group = dev_peter
 
-# Database连接参数
+# Database
 spring.datasource.url=jdbc:mysql://dev.mysql.intecsec.com:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -13,7 +13,7 @@ spring.redis.host=dev.redis.intecsec.com
 spring.redis.port=6379
 spring.redis.password=
 
-# RocketMQ配置
+# RocketMQ
 rocketmq.consumer.groupName=PushConsumer
 rocketmq.producer.groupName=Producer
 rocketmq.namesrvAddr=dev.mq.intecsec.com:9876
