--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -2,10 +2,7 @@ server.port=8090
 spring.application.name=gateway
 spring.profiles.active=dev
 
-# Log
-log.file.dir=/data/java/logs/intecsec/dubbo/gateway
-
-## Dubbo œ˚∑—’ﬂ≈‰÷√
+## Dubbo
 dubbo.registry.protocol=zookeeper
 dubbo.protocol.name=dubbo
 dubbo.consumer.check=false
