--- a/user-app/src/main/resources/application-local.properties
+++ b/user-app/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
-## Dubbo 服务提供者配置
+## Dubbo Registry
 dubbo.registry.address=localhost:2181
 dubbo.registry.group = local
 
-# Database连接参数
+# Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -13,7 +13,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 
-# RocketMQ配置
+# RocketMQ
 rocketmq.consumer.groupName=PushConsumer
 rocketmq.producer.groupName=Producer
 rocketmq.namesrvAddr=localhost:9876
