--- a/item-app/src/main/resources/application.properties
+++ b/item-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.profiles.active=dev
+spring.profiles.active=local
 spring.application.name=item
 
 # Database Common
@@ -14,7 +14,7 @@ dubbo.protocol.name=dubbo
 dubbo.provider.threads=200
 dubbo.provider.timeout=2000
 dubbo.provider.retries=0
-dubbo.monitor.protocol=registry
+# dubbo.monitor.protocol=registry
 dubbo.consumer.check=false
 dubbo.protocol.port=20805
 
@@ -37,6 +37,7 @@ spring.redis.timeBetweenEvictionRunsMillis=60000
 apache.rocketmq.enableHisConsumer=false
 apache.rocketmq.enableOrderConsumer=false
 
-
-
+# superq
+superq.executor.appname=xxl-job-executor-sample
+superq.executor.port=9998
 
