--- a/item-app/pom.xml
+++ b/item-app/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>item-common</artifactId>
         </dependency>
 
+        <!-- xxl-job-core -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
