--- a/item-app/src/main/resources/application-local.properties
+++ b/item-app/src/main/resources/application-local.properties
@@ -1,6 +1,8 @@
 ## Dubbo Registry
-dubbo.registry.address=localhost:2181
-dubbo.registry.group = local
+dubbo.registry.address=dev.zk.intecsec.com:2181
+# dubbo.registry.group=local
+dubbo.provider.group=local
+dubbo.consumer.group=local
 
 # Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
