接入自己rpc 改版后台的 xxl-job

--- a/item-app/src/main/resources/application-local.properties
+++ b/item-app/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@
 dubbo.registry.address=dev.zk.intecsec.com:2181
 # dubbo.registry.group=local
 dubbo.provider.group=local
-dubbo.consumer.group=local
+dubbo.consumer.group=dev
 
 # Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
