--- a/item-app/src/main/resources/application.properties
+++ b/item-app/src/main/resources/application.properties
@@ -40,4 +40,5 @@ apache.rocketmq.enableOrderConsumer=false
 # superq
 superq.executor.appname=xxl-job-executor-sample
 superq.executor.port=9998
+superq.executor.useDubbo=1
 
