--- a/item-app/src/main/resources/application-dev.properties
+++ b/item-app/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 ## Dubbo Registry
 dubbo.registry.address=dev.zk.intecsec.com:2181
-dubbo.registry.group = dev
+dubbo.provider.group=dev
+dubbo.consumer.group=dev
 
 # Database
 spring.datasource.url=jdbc:mysql://dev.mysql.intecsec.com:3306/intecsec_springboot?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false
