修改dubbo注解, 修改gateway预计功能

--- a/market-client/pom.xml
+++ b/market-client/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>checkout-common</artifactId>
+    <artifactId>market-client</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>checkout-common</artifactId>
         </dependency>
     </dependencies>
 
