--- a/market-app/pom.xml
+++ b/market-app/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>checkout-app</artifactId>
+    <artifactId>market-app</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>checkout-client</artifactId>
+            <artifactId>market-client</artifactId>
         </dependency>
 
         <!-- rpc框架dubbo -->
