blog add nacos as registry

--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mybatis.type-aliases-package=com.intecsec.blog.mapper
 
 ## Dubbo
 dubbo.application.name=intecsec-blog-dubbo-provider
-dubbo.registry.protocol=zookeeper
+# dubbo.registry.protocol=zookeeper nacos
 dubbo.protocol.name=dubbo
 dubbo.provider.threads=200
 dubbo.provider.timeout=2000
