--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 		<mysql.connector.java.version>8.0.19</mysql.connector.java.version>
 		<dubbo.spring.boot.version>2.7.8</dubbo.spring.boot.version>
 		<dubbo.dependency.zookeeper.version>2.7.8</dubbo.dependency.zookeeper.version>
+		<dubbo.registry.nacos.version>2.7.8</dubbo.registry.nacos.version>
+		<dubbo.nacos.client.version>1.4.3</dubbo.nacos.client.version>
 		<mybatis.spring.boot.starter.version>2.1.1</mybatis.spring.boot.starter.version>
 		<spring.boot.starter.jdbc.version>2.3.4.RELEASE</spring.boot.starter.jdbc.version>
 		<spring.boot.starter.version>2.3.4.RELEASE</spring.boot.starter.version>
@@ -175,6 +177,20 @@
 				<artifactId>dubbo-dependencies-zookeeper</artifactId>
 				<version>${dubbo.dependency.zookeeper.version}</version>
 				<type>pom</type>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-registry-nacos -->
+			<dependency>
+				<groupId>org.apache.dubbo</groupId>
+				<artifactId>dubbo-registry-nacos</artifactId>
+				<version>${dubbo.registry.nacos.version}</version>
+			</dependency>
+
+			<!-- https://mvnrepository.com/artifact/com.alibaba.nacos/nacos-client -->
+			<dependency>
+				<groupId>com.alibaba.nacos</groupId>
+				<artifactId>nacos-client</artifactId>
+				<version>${dubbo.nacos.client.version}</version>
 			</dependency>
 
 			<dependency>
